[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "FRAME asset management pallet"
edition = "2018"
homepage = "https://substrate.dev"
license = "Apache-2.0"
name = "pallet-assets"
readme = "README.md"
repository = "https://github.com/paritytech/substrate/"
version = "3.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "2.0.0", default-features = false}
serde = {version = "1.0.101", optional = true}
sp-std = {version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
# Needed for various traits. In our case, `OnFinalize`.
sp-runtime = {version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
# Needed for type-safe access to storage DB.
frame-support = {version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
# `system` module provides us with all sorts of useful stuff and macros depend on it being around.
frame-benchmarking = {version = "3.0.0", default-features = false, optional = true, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
frame-system = {version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}

[dev-dependencies]
pallet-balances = {version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
sp-core = {version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
sp-io = {version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
sp-std = {version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking",
  "sp-runtime/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
]
std = [
  "serde",
  "codec/std",
  "sp-std/std",
  "sp-runtime/std",
  "frame-support/std",
  "frame-system/std",
  "frame-benchmarking/std",
]
try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
]
